--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Migrate==3.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-Table==0.5.0
 greenlet==1.1.0
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.4
